--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Recipes 2 Go{% endblock %}</title>
     <link rel="stylesheet" href="{% static "styles.css" %}"/>
     
+    
 </head>
 <body>
     <header>
@@ -14,9 +15,14 @@
             <div class="div-container">
                 <ul class="nav-links">
                     <div class="link-container">
-                        
+                        <img src="{% static 'student-recipe.png' %}" alt="Student Kitchen Logo" class="logo-properties">
+                        <li><a href="#" ><button class="pill" type="button">Forums</button></a></li>
+
+                        <li><a href="#" ><button class="pill" type="button">Share Recipes</button></a></li>
                         
                     </div>
+
+                    
                     
                     
                         
