--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Recipes 2 Go{% endblock %}</title>
+    <title>{% block title %}Student Kitchen{% endblock %}</title>
     <link rel="stylesheet" href="{% static "styles.css" %}"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     
     
 </head>
@@ -16,11 +17,31 @@
                 <ul class="nav-links">
                     <div class="link-container">
                         <img src="{% static 'student-recipe.png' %}" alt="Student Kitchen Logo" class="logo-properties">
-                        <li><a href="#" ><button class="pill" type="button">Forums</button></a></li>
+                        <div class="moving-links-div">
+                            <li><i class="fa-solid fa-house icon-styling"></i><a href="{% url 'home' %}" class="nav-link-styling" >Home</a></li>
 
-                        <li><a href="#" ><button class="pill" type="button">Share Recipes</button></a></li>
+
+                            <li><i class="fa-solid fa-users icon-styling"></i><a href="{% url 'forums' %}" class="nav-link-styling" >Forums</a></li>
+
+                            <li><i class="fa-solid fa-share icon-styling"></i><a href="{% url 'share' %}" class="nav-link-styling" >Share Recipes</a></li>
+
+                            <div class="dropdown">
+                                <button class="link"><i class="fa-solid fa-bars"></i></button>
+                                <div class="dropdown-menu">
+                                    Content
+                                
+                                </div>
+                            </div>
+                        
+                        </div>
+
+                        
+
+                        
                         
                     </div>
+
+                    
 
                     
                     
