--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -1,19 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if recipes %}
-        <h1>Recipes</h1>
-        <ul>
-            {% for recipe in recipes %}
-                <li><a href="{% url 'recipe_detail' recipes_name=recipe %}">{{ recipe }}</a></li>
-            {% endfor %}
-        </ul>
+    {#{% if recipes %}#}
+        {#<h1>Recipes</h1>#}
+        {#<ul>#}
+            {#{% for recipe in recipes %}#}
+                {#<li><a href="{% url 'recipe_detail' recipes_name=recipe %}">{{ recipe }}</a></li>#}
+            {#{% endfor %}#}
+        {#</ul>#}
 
         
-        <button type="button" class="form-buttons form-1-home-button">Built-in Choices</button>
-        <button type="button" class="form-buttons form-2-home-button">Filter Recipes</button>
-    {% elif recipe %}
-        <h1>{{ recipe.recipe_name }}</h1>
-        <p>{{ recipe.instructions }}</p>
-    {% endif %}
+        <button type="button" class="form-buttons form-1-home-button">
+            <a href="{% url 'builtinchoices' %}" class="form-1-anchor-style">
+                Built-in Choices
+            </a>
+        </button>
+        <button type="button" class="form-buttons form-2-home-button">
+            <a href="{% url 'filterrecipes' %}" class="form-2-anchor-style">
+                Filter Recipes
+            </a>
+        </button>
+    
+        
+    {#{% elif recipe %}#}
+        {#<h1>{{ recipe.recipe_name }}</h1>#}
+        {#<p>{{ recipe.instructions }}</p>#}
+    {#{% endif %}#}
 {% endblock %}
