changes made at home 11/12

--- a/app/templates/filterrecipes.html
+++ b/app/templates/filterrecipes.html
@@ -4,4 +4,35 @@
 
 <h1>This is the page for built-in filtering</h1>
 
+<form>
+
+    <label>
+        Crock Pot
+        <input type="checkbox">
+    </label>
+
+    <label>
+        Oven
+        <input type="checkbox">
+    </label>
+
+    <label>
+        Microwave
+        <input type="checkbox">
+    </label>
+
+    <label>
+        Skillet
+        <input type="checkbox">
+    </label>
+
+    <label>
+        Air Fryer
+        <input type="checkbox">
+    </label>
+    
+
+
+</form>
+
 {% endblock %}
