--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,9 @@
                             <li><i class="fa-solid fa-share icon-styling"></i><a href="{% url 'share' %}" class="nav-link-styling" >Share Recipes</a></li>
 
                             <div class="dropdown">
-                                <button class="link"><i class="fa-solid fa-bars"></i></button>
+                                <button class="link"><i class="fa-solid fa-cart-shopping"></i><i class="fa-solid fa-bars"></i></button>
                                 <div class="dropdown-menu">
-                                    Content
+                                    <li><i class="fa-solid fa-cart-shopping"></i></i><a href="{% url 'currentrecipe' %}">Current Recipes</a></li>
                                 
                                 </div>
                             </div>
