--- a/app/templates/filterrecipes.html
+++ b/app/templates/filterrecipes.html
@@ -69,13 +69,15 @@
     <button type="submit" class="form-buttons form-buttons-filter">Filter by Temperature</button>
 </form>
 
+{# Filter by prep time in minutes #}
+
 <form method="POST" class="form-background">
     {% csrf_token %}
     <select name="prep_time_in_minutes" id="prep_time_in_minutes">
         <option value="">--Select Recipes With Minute Prep Times--</option>
-        {% for time in prep_time_in_minutes %}
-            <option value="{{ time }}" {% if selected_author == time %} selected {% endif %}>
-                {{ time }}
+        {% for time in recipe_prepping_time_in_minutes %}
+            <option value="{{ time }}" {% if selected_prep_time_in_minutes == time %} selected {% endif %}>
+                {{ time }} minutes
             </option>
         {% endfor %}
     </select>
@@ -83,6 +85,24 @@
         Search By Minutes To Prep
     </button>
 </form>
+
+{# Filter by prep time in hours #}
+<form method="POST" class="form-background">
+    {% csrf_token %}
+    <select name="prep_time_in_hours" id="prep_time_in_hours">
+        <option value="">--Select Recipes With Hour Prep Times--</option>
+        {% for time in recipe_prepping_time_in_hours %}
+            <option value="{{ time }}" {% if selected_prep_time_in_hours == time %} selected {% endif %}>
+                {{ time }} hours
+            </option>
+        {% endfor %}
+    </select>
+    <button type="submit" class="form-buttons form-buttons-filter">
+        Search By Hours To Prep
+    </button>
+</form>
+
+
 
 
 
@@ -99,7 +119,23 @@
             <p class="result-fonttype">Author:{{ recipe.recipe_author }}</p>
             <p class="result-fonttype">Ingredients:{{ recipe.ingredients_needed }}</p>
             <p class="result-fonttype">Instructions:{{ recipe.recipe_instructions}}</p>
-            <button class="form-buttons form-buttons-filter">Add Recipe</button>
+            <form method="POST" action="{% url 'currentrecipe' %}">
+                {% csrf_token %}
+                <input type="hidden" name="recipe_name" value="{{ recipe.recipe_name }}">
+                <input type="hidden" name="recipe_author" value="{{ recipe.recipe_author }}">
+                <input type="hidden" name="recipe_type" value="{{ recipe.recipe_type }}">
+                <input type="hidden" name="ingredients_needed" value="{{ recipe.ingredients_needed }}">
+                <input type="hidden" name="recipe_instructions" value="{{ recipe.recipe_instructions }}">
+                <input type="hidden" name="cooking_temp" value="{{ recipe.cooking_temp }}">
+                <input type="hidden" name="prep_time_in_minutes" value="{{ recipe.prep_time_in_minutes }}">
+                <input type="hidden" name="prep_time_in_hours" value="{{ recipe.prep_time_in_hours }}">
+                <input type="hidden" name="servings" value="{{ recipe.servings }}">
+            
+                <button type="submit" class="form-buttons form-buttons-filter">
+                    Add Recipe To Cart
+                </button>
+            </form>
+            
         {% empty %}
             <p>1No recipes found.</p>
             <p>{{result}}</p>
@@ -113,11 +149,28 @@
             <p class="result-fonttype">Author:{{ recipe.recipe_author }}</p>
             <p class="result-fonttype">Ingredients:{{ recipe.ingredients_needed }}</p>
             <p class="result-fonttype">Instructions:{{ recipe.recipe_instructions}}</p>
-            <button class="form-buttons form-buttons-filter">Add Recipe</button>
+            <form method="POST" action="{% url 'currentrecipe' %}">
+                {% csrf_token %}
+                <input type="hidden" name="recipe_name" value="{{ recipe.recipe_name }}">
+                <input type="hidden" name="recipe_author" value="{{ recipe.recipe_author }}">
+                <input type="hidden" name="recipe_type" value="{{ recipe.recipe_type }}">
+                <input type="hidden" name="ingredients_needed" value="{{ recipe.ingredients_needed }}">
+                <input type="hidden" name="recipe_instructions" value="{{ recipe.recipe_instructions }}">
+                <input type="hidden" name="cooking_temp" value="{{ recipe.cooking_temp }}">
+                <input type="hidden" name="prep_time_in_minutes" value="{{ recipe.prep_time_in_minutes }}">
+                <input type="hidden" name="prep_time_in_hours" value="{{ recipe.prep_time_in_hours }}">
+                <input type="hidden" name="servings" value="{{ recipe.servings }}">
+            
+                <button type="submit" class="form-buttons form-buttons-filter">
+                    Add Recipe To Cart
+                </button>
+            </form>
+            
         {% empty %}
             <p>2No recipes found.</p>
         {% endfor %}
     {% endif%}
+    
 
     
 </div>
