--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
                             <div class="dropdown">
                                 <button class="link"><i class="fa-solid fa-cart-shopping"></i><i class="fa-solid fa-bars"></i></button>
                                 <div class="dropdown-menu">
-                                    <li><i class="fa-solid fa-cart-shopping"></i></i><a href="{% url 'currentrecipe' %}">Current Recipes</a></li>
+                                    <li><i class="fa-solid fa-cart-shopping"></i><a class="font-color"  href="{% url 'currentrecipe' %}">Current Recipes</a></li>
                                 
                                 </div>
                             </div>
