--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
 
                             <li><i class="fa-solid fa-users icon-styling"></i><a href="{% url 'forums' %}" class="nav-link-styling" >Forums</a></li>
 
-                            <li><i class="fa-solid fa-share icon-styling"></i><a href="{% url 'share' %}" class="nav-link-styling" >Share Recipes</a></li>
+                            <li><i class="fa-solid fa-circle-exclamation icon-styling"></i><a href="{% url 'share' %}" class="nav-link-styling" >About</a></li>
 
                             <div class="dropdown">
                                 <button class="link"><i class="fa-solid fa-cart-shopping"></i><i class="fa-solid fa-bars"></i></button>
