--- a/app/templates/currentrecipe.html
+++ b/app/templates/currentrecipe.html
@@ -35,6 +35,12 @@
                             <i class="fa-solid fa-delete-left"></i>
                             Delete From Cart
                         </button>
+                        <button type="button" class="form-buttons form-1-home-button">
+                            <a href="{% url 'forums' %}" class="form-1-anchor-style">
+                                Rate This Recipe
+                            </a>
+                            <i class="fa-regular fa-star"></i>
+                        </button>
                     </form>
                 </div>
                 <hr>
