--- a/app/templates/recipes.html
+++ b/app/templates/recipes.html
@@ -18,6 +18,20 @@
 
                 <img src="{% static 'recipe1.jpg' %}" alt="Image of Ham Sliders" class="image-change">
 
+                <img src="{% static 'recipe3.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+                <img src="{% static 'recipe4.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+                <img src="{% static 'recipe5.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+                <img src="{% static 'recipe6.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+                <img src="{% static 'recipe7.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+                <img src="{% static 'recipe8.jpg' %}" alt="Image of Ham Sliders" class="image-change">
+
+
+
             </div>
 
         </div>
